--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,14 +1,9 @@
 <div class="author">
-    <h1 class="author__heading">Hi, I'm Dumindu.</h1>
-    <p class="author__body">Full Stack developer and Designer.</p>
+    <h1 class="author__heading">Search Results</h1>
 </div>
-
-<img src="/img/hero.webp" alt="blogger image" class="hero-image" width="981" height="528">
 
 <section class="articles">
 
-    <h2 class="articles_-heading">Latest Posts</h2>
-    
     <ul class="article-ul">
 
         <% data.forEach(post => { %>
@@ -21,10 +16,4 @@
         <% }) %>
     </ul>
 
-    <% if (nextPage !== null) { %>
-        <a href="/?page=<%= nextPage %>" class="pagination">&lt; View Older Posts</a>
-    <% } %>
-
-
-    
 </section>
